simple fix to cupola problem :) confirm that it works on iOS

--- a/www/css/hamApp.css
+++ b/www/css/hamApp.css
@@ -529,7 +529,7 @@ a.homeicon.ui-btn {
     top: 0;
     background-attachment: fixed;
     background-position: bottom;
-    -webkit-mask-position:0 2.8cm
+    -webkit-mask-position: bottom;
 }
 .news-navbarcont > .xnavbar > li > a {
   height: initial;
